manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phase2
  name: phase2
  namespace: sdtd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phase2
  template:
    metadata:
      labels:
        app: phase2
    spec:
      containers:
        - image: ilisius/phase2
          imagePullPolicy: Always
          name: phase2
          resources:
            limits:
              cpu: "1"
              memory: 500Mi
            requests:
              cpu: "1"
              memory: 500Mi
#      nodeSelector:
#        worker: "true"
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phase3
  name: phase3
  namespace: sdtd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phase3
  template:
    metadata:
      labels:
        app: phase3
    spec:
      containers:
        - image: ilisius/phase3
          imagePullPolicy: Always
          name: phase3
          resources:
            limits:
              cpu: "1"
              memory: 500Mi
            requests:
              cpu: "1"
              memory: 500Mi
      restartPolicy: Always
#      nodeSelector:
#        worker: "true"
