cassandra-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
  namespace: sdtd
spec:
  clusterIP: None
  ports:
    - port: 9042
  selector:
    app: cassandra
---
apiVersion: "apps/v1" # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
     app: cassandra
  namespace: sdtd
spec:
  serviceName: cassandra
  replicas: 3
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
      - name: cassandra
        image: gcr.io/google-samples/cassandra:v14
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
          name: intra-node
        - containerPort: 7001
          name: tls-intra-node
        - containerPort: 7199
          name: jmx
        - containerPort: 9042
          name: cql
        resources:
          limits:
            cpu: "700m"
            memory: 2Gi
          requests:
           cpu: "700m"
           memory: 2Gi
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - nodetool drain
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /ready-probe.sh
          initialDelaySeconds: 50
          timeoutSeconds: 50
        volumeMounts:
        - name: cassandra-data
          mountPath: /var/lib/cassandra
      nodeSelector:
        worker: "true"
  volumeClaimTemplates:
  - metadata:
      name: cassandra-data
      labels:
         app: cassandra
    spec:
      accessModes: 
        - "ReadWriteOnce"
      storageClassName: lh
      resources:
        requests:
          storage: 3Gi
