phase1-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phase1-deployer
  name: phase1-deployer
  namespace: sdtd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phase1-deployer
  template:
    metadata:
      labels:
        app: phase1-deployer
    spec:
      serviceAccountName: phase1-deployer
      containers:
        - image: ilisius/deployment_phase1
          imagePullPolicy: Always
          name: phase1-deployer
      restartPolicy: Always
      nodeSelector:
        worker: "true"
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: phase1-deployer
  namespace: sdtd
spec:
  selector:
    app: phase1-deployer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phase1-deployer
  namespace: sdtd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`phase1.sdtd.marche.ovh`)
      kind: Rule
      services:
        - name: phase1-deployer
          port: 80
      middlewares:
        - name: cors-phase1
          namespace: sdtd
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-phase1
  namespace: sdtd
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
